# nexus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Modelfile  README.md  build_desktop.bat  main.py  nexus_dataset.jsonl  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  run_training_pipeline.bat
.github/workflows/: ci.yml
backend/: server.js
backend/routes/: auth.js
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
desktop/: backend_entry.py  main.cjs  package-lock.json  package.json  preload.cjs
docs/: DESKTOP_PACKAGING.md  NEXUS_HIVE.md  WINDOWS_SETUP.md
docs/launch/: COLD_INSTALL_REPORT.md  DEMO_SCRIPT.md  GITHUB_RELEASE_NOTES.md  HACKERNEWS_DRAFT.md  LAUNCH_CHECKLIST.md  X_LINKEDIN_POST.md
frontend/: app.js  index.html  styles.css
lora_model/: README.md  adapter_config.json  tokenizer.json  tokenizer_config.json
nexus/: __init__.py  api.py  blueprint_generator.py  cli.py  config.py  intent_parser.py  orchestrator.py  shared_memory.py  wiring_engine.py
nexus/agents/: __init__.py  base_agent.py  coding_agent.py  design_agent.py  file_agent.py  memory_agent.py  research_agent.py
nexus/canary/: __init__.py  canary_agent.py  risk_engine.py  seeding.py
nexus/compiler/: __init__.py  planner_engine.py
nexus/compress/: __init__.py  compressor.py
nexus/critics/: __init__.py  base.py  correctness_critic.py  efficiency_critic.py  multi_critic.py  safety_critic.py
nexus/hive/: models.py  (+7 more)
playwright-runner/: package-lock.json
safebench/: .gitignore  README.md  pyproject.toml
safebench/datasets/: coding_honesty.json
safebench/manifests/: core.json
safebench/runs/20260409T131303Z-coding_honesty/: dataset_snapshot.json  scenario_results.jsonl  summary.json
safebench/src/nexus_safebench/: __init__.py  __main__.py  cli.py  dataset.py  manifest.py  models.py  runner.py  scoring.py
safebench/tests/: test_dataset.py  test_manifest.py  test_runner.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  health.rs  main.rs  setup.rs
tests/: test_cli_runtime_checks.py  test_compressor.py  test_context_reducer.py  test_executor.py  test_file_agent.py  test_hive.py  test_hive_runtime.py  test_mind_router.py  test_model_control.py  test_reflect_score.py  test_runtime_system.py  test_tier1_upgrades.py  test_tier2_upgrades.py  test_tier3_upgrades.py  test_workspace_mode.py
tools/: build_backend_bundle.py  dev.py  download_model.py  upload_model.py
(+66 files in other folders)
