[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai"
version = "0.1.0"
description = "Offline AI system that plans, executes, and improves tasks with full visibility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
cloud = [
    "anthropic>=0.25.0",
    "groq>=0.5.0",
]
memory = [
    "supabase>=2.4.0",
]
compression = [
    "auto-gptq>=0.7.1",
    "datasets>=2.18.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
]
voice = [
    "faster-whisper>=1.0.0",
    "scipy>=1.13.0",
    "sounddevice>=0.4.6",
    "TTS>=0.22.0",
]
full = [
    "anthropic>=0.25.0",
    "auto-gptq>=0.7.1",
    "datasets>=2.18.0",
    "faster-whisper>=1.0.0",
    "groq>=0.5.0",
    "scipy>=1.13.0",
    "sounddevice>=0.4.6",
    "supabase>=2.4.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "TTS>=0.22.0",
]

[project.scripts]
nexus = "nexus.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*"]
