[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-safebench"
version = "0.1.0"
description = "Benchmark scaffold for autonomous coding agent safety, honesty, and task completion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.scripts]
safebench = "nexus_safebench.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nexus_safebench*"]
