[package]
name = "nexus"
version = "0.2.0"
description = "NEXUS"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "shell-open", "shell-execute", "http-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39", features = ["full", "sync", "rt"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
